  endings; and I'm sure the Jython interpreter also takes a liberal
  approach where a file has mixed line endings. I've applied a simple
  escaping scheme to fix this. Thanks to Claes T Tenell for the report.

  Fix bug 1228335 - File editing should consider end of line. The console
  editor now canonicalises line endings on input, and uses the host
  platform line ending on output.


The Grinder 3.0-beta32
----------------------

  Fix bug 1577573 - valueFromBodyURI() could be optimised. TCPProxy
  recorded scripts use this method, and its previous inefficiency
  caused beta 30 and beta 31 to be overly demanding of CPU and memory.
  Thanks to Andy Kim for the original bug report.

  Fix bug 1579641 - Exceptions thrown by HTTPRequest.processResponse()
  were not logged correctly. Thanks to Richard Taylor for the report.

  Fix bug 1585912 - jdbc.py incorrectly indented. Thanks to Coey
  (cminear at users.sourceforge.net) for the report.

  Fix bug 1593169 - AssertionError thrown in instrumentation code. Thanks
  to Peter Wickersham and Matt Schlobohm for the report and analysis.

  Added MQ library and example code from Phillip Mayhew to the contrib
  directory.

  Fix bug 1592664 - InterruptedException when grinder.processes > 1.
  This is due to JRE badness that I've had to work around. Thanks to
  Stephane Nicoll and whoever opened the bug for the reports.

  Fix bug 1604111 - Deadlock on shutdown (TCPProxy). Thanks to Graham
  Sweetland for his assistance in reproducing this problem.

  Added an initial version of the console API. This API is under
  development and not stable. It will grow and change over the next
  few releases. Its not ready for mass consumption yet, but advanced
  users can check out the API (net.grinder.console.client.ConsoleClient).


The Grinder 3.0-beta31
----------------------

  Fix bug 1199086 - Distribution to multiple agents hangs. Thanks to
  capwin@sourceforge.net for analysing the problem.
